<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="@dimen/_15sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lnProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_17sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:onClick="clickNavigation"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivProfile"
                android:layout_width="@dimen/_55sdp"
                android:layout_height="@dimen/_55sdp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:src="@drawable/ic_bitmap" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvProfileName"
                    style="@style/bold26BlueTextLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tyson Maynard"
                    android:textColor="@color/color687171"
                    android:textSize="@dimen/_15ssp" />

                <com.iarcuschin.simpleratingbar.SimpleRatingBar
                    android:id="@+id/ratingChef"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:indeterminateDrawable="@drawable/ratingbar"
                    android:progressDrawable="@drawable/ratingbar"
                    app:srb_drawBorderEnabled="false"
                    app:srb_fillColor="@color/colorFFC107"
                    app:srb_isIndicator="true"
                    app:srb_numberOfStars="5"
                    app:srb_pressedFillColor="@color/colorFFC107"
                    app:srb_rating="4"
                    app:srb_starBackgroundColor="#FFD7D7D7"
                    app:srb_starCornerRadius="15"
                    app:srb_starSize="@dimen/_15sdp"
                    app:srb_starsSeparation="@dimen/_5sdp"
                    app:srb_stepSize="0.1" />


            </LinearLayout>

        </LinearLayout>

        <View
            android:background="#CCD1DB"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/_25sdp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/navHome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_25sdp"
                        android:gravity="left|center"
                        android:onClick="clickNavigation"
                        android:orientation="horizontal"
                        tools:ignore="TouchTargetSizeCheck">

                        <ImageView
                            android:id="@+id/imgHomeNav"
                            android:layout_width="@dimen/_17sdp"
                            android:layout_height="@dimen/_17sdp"
                            android:src="@drawable/ic_home" />

                        <TextView
                            android:id="@+id/tvHomeNav"
                            style="@style/regular12DarkGreyText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:gravity="left|center"
                            android:paddingTop="@dimen/_2sdp"
                            android:text="@string/home"
                            android:textSize="@dimen/_15ssp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/navmyorder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_25sdp"
                        android:gravity="left|center"
                        android:onClick="clickNavigation"
                        android:orientation="horizontal"
                        tools:ignore="TouchTargetSizeCheck">

                        <ImageView
                            android:id="@+id/imgMyOrderNav"
                            android:layout_width="@dimen/_17sdp"
                            android:layout_height="@dimen/_17sdp"
                            android:src="@drawable/ic_history" />

                        <TextView
                            android:id="@+id/tvMyOrderNav"
                            style="@style/regular12DarkGreyText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:gravity="left|center"
                            android:paddingTop="@dimen/_2sdp"
                            android:text="@string/myorder"
                            android:textSize="@dimen/_15ssp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/navPayment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_25sdp"
                        android:gravity="left|center"
                        android:onClick="clickNavigation"
                        android:orientation="horizontal"
                        tools:ignore="TouchTargetSizeCheck">

                        <ImageView
                            android:id="@+id/imgPaymentNav"
                            android:layout_width="@dimen/_17sdp"
                            android:layout_height="@dimen/_17sdp"
                            android:src="@drawable/ic_payment" />

                        <TextView
                            android:id="@+id/tvPaymentNav"
                            style="@style/regular12DarkGreyText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:gravity="left|center"
                            android:paddingTop="@dimen/_2sdp"
                            android:text="@string/payment"
                            android:textSize="@dimen/_15ssp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/navNotification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_25sdp"
                        android:gravity="left|center"
                        android:onClick="clickNavigation"
                        android:orientation="horizontal"
                        tools:ignore="TouchTargetSizeCheck">

                        <ImageView
                            android:id="@+id/imgNotificationNav"
                            android:layout_width="@dimen/_17sdp"
                            android:layout_height="@dimen/_17sdp"
                            android:src="@drawable/ic_notification" />

                        <TextView
                            android:id="@+id/tvNotificationNav"
                            style="@style/regular12DarkGreyText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:gravity="left|center"
                            android:paddingTop="@dimen/_2sdp"
                            android:text="@string/notification"
                            android:textSize="@dimen/_15ssp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/navhelp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_25sdp"
                        android:gravity="left|center"
                        android:onClick="clickNavigation"
                        android:orientation="horizontal"
                        tools:ignore="TouchTargetSizeCheck">

                        <ImageView
                            android:id="@+id/imgHelpNav"
                            android:layout_width="@dimen/_17sdp"
                            android:layout_height="@dimen/_17sdp"
                            android:src="@drawable/ic_question" />

                        <TextView
                            android:id="@+id/tvHelpNav"
                            style="@style/regular12DarkGreyText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:gravity="left|center"
                            android:paddingTop="@dimen/_2sdp"
                            android:text="@string/help"
                            android:textSize="@dimen/_15ssp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/navsetting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_25sdp"
                        android:gravity="left|center"
                        android:onClick="clickNavigation"
                        android:orientation="horizontal"
                        tools:ignore="TouchTargetSizeCheck">

                        <ImageView
                            android:id="@+id/imgSettingNav"
                            android:layout_width="@dimen/_17sdp"
                            android:layout_height="@dimen/_17sdp"
                            android:src="@drawable/ic_settings" />

                        <TextView
                            android:id="@+id/tvSettingNav"
                            style="@style/regular12DarkGreyText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:gravity="left|center"
                            android:paddingTop="@dimen/_2sdp"
                            android:text="@string/setting"
                            android:textSize="@dimen/_15ssp" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</LinearLayout>
