<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/drawerLayout"
    android:layout_height="match_parent"
    tools:context=".view.activity.HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/colorF2F2F2"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_10sdp">

            <LinearLayout
                android:id="@+id/toolbar_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imgLeftIcon"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginVertical="@dimen/_10sdp"
                        android:src="@drawable/ic_menu"
                        app:tint="@color/colorPrimary" />


                    <LinearLayout
                        android:id="@+id/llLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginHorizontal="@dimen/_15sdp"
                        android:layout_toLeftOf="@id/imgRightIcon"
                        android:layout_toRightOf="@id/imgLeftIcon"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/_16sdp"
                            android:layout_height="@dimen/_16sdp"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:src="@drawable/ic_location" />

                        <TextView
                            style="@style/regular12BlackText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/_2sdp"
                            android:gravity="center"
                            android:singleLine="true"
                            android:text="8 Hartland Avenue NY" />

                        <ImageView
                            android:layout_width="@dimen/_12sdp"
                            android:layout_height="21dp"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:src="@drawable/ic_down_arrow" />


                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imgRightIcon"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center"
                        android:layout_marginVertical="@dimen/_10sdp"
                        android:src="@drawable/ic_map" />

                </RelativeLayout>

            </LinearLayout>

            <TextView
                style="@style/regular14BlackMediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_10sdp"
                android:text="@string/whatyouwant" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/search_bg"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:padding="@dimen/_7sdp"
                    android:src="@drawable/ic_search" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:background="@color/transparent"
                    android:fontFamily="@font/gt_eesti_display_regular"
                    android:hint="Search" />

            </LinearLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/regular14BlackMediumText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/_15sdp"
                        android:text="@string/Explore" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvExplore"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:spanCount="3"
                        tools:itemCount="3"
                        tools:listitem="@layout/item_explore" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/regular14BlackMediumText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="@dimen/_15sdp"
                            android:text="@string/offers" />

                        <TextView
                            style="@style/regularBlueText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginVertical="@dimen/_15sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:text="@string/more" />

                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvOffers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:ignore="SpeakableTextPresentCheck"
                        tools:itemCount="1"
                        tools:listitem="@layout/item_offers"/>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

        <include
            android:id="@+id/aMain_layout_navigation"
            layout="@layout/item_navigation_menu" />

    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>